olfs-1.9.0: Reorganized deployment and runtime manifestation so that we are using the default tomcat servlet and JspServlet in the manner that the Tomcat crew thinks is "normal". Moved all crucial application documents out of the docs dir and into the web application dir so that the users won;t overwrite them if they supply their own docs bundle (style sheets, images, html pages, etc)

--- a/build.xml
+++ b/build.xml
@@ -162,6 +162,7 @@
     <property name="WebInfResources.dir" location="${resources.dir}/hyrax/WEB-INF"/>
     <property name="distributionResources.dir"  location="${resources.dir}/distribution"/>
 
+    <property name="hyraxResources.dir" location="${resources.dir}/hyrax"/>
     <property name="ncISO.dir" location="${resources.dir}/nciso"/>
     <property name="GatewayResources.dir" location="${resources.dir}/gateway"/>
     <property name="WebStartResources.dir" location="${resources.dir}/WebStart"/>
@@ -181,14 +182,14 @@
     <property name="build.lib" location="${build.dir}/lib"/>
     <property name="build.run" location="${build.dir}/run"/>
     <property name="build.src" location="${build.dir}/src"/>
+    <property name="build.webapp" location="${build.dir}/webapp"/>
 
 
 
     <!-- Libraries -->
-    <property name="junit.lib"   value="junit-4.4.jar"/>
-    <property name="jdom.lib"    value="jdom-1.1.1.jar"/>
-    <property name="servlet-api.lib" value="servlet-api-2.5.jar"/>
-    <property name="echo.lib"    value="echosoap.jar"/>
+    <property name="junit.lib"       value="junit-4.4.jar"/>
+    <property name="jdom.lib"        value="jdom-1.1.1.jar"/>
+    <property name="urlRewrite.lib"      value="urlrewrite-3.2.0.jar"/>
 
 
     <property name="slf4j.lib"            value="slf4j-api-1.6.1.jar"/>
@@ -215,7 +216,8 @@
     <property name="saxon-s9api.lib" value="saxon-9.1.0.5-s9api.jar"/>
     <property name="saxon.lib"       value="saxon-9.1.0.5.jar"/>
 
-    <property name="catalina.lib"       value="catalina-6.0.14.jar"/>
+    <property name="catalina.lib"         value="catalina-6.0.14.jar"/>
+    <property name="servlet-api.lib"      value="servlet-api-2.5.jar"/>
 
 
     <available classname="com.fortify.dev.ant.SourceanalyzerTask"
@@ -403,8 +405,8 @@
     </target>
 
 
-
     <target name="olfs-lib" depends="clean,compile">
+
         <jar destfile="${build.lib}/olfs-${OLFS_VERSION}.jar">
             <fileset dir="${build.classes}">
                 <exclude name="hao/**/*.class"/>
@@ -425,7 +427,7 @@
 
 
     <target
-            name="doc"
+            name="javaDoc"
             depends="clean,PreProcessSourceCode,IsJavaDocUpToDate"
             description="Builds JavaDoc for the Serve4 software packages, if missing or out of date."
             unless="JavaDocIsUpToDate"
@@ -444,26 +446,11 @@
 
         </javadoc>
 
-        <!-- Turning on filtering here allows us to inject the version number
-           - into the XSLT code that is hanging off of the docs tree.
-           -
-           -->
-        <copy todir="${build.doc}" filtering="false" >
-            <fileset dir="${doc.dir}">
-                <exclude name="javadoc/**"/><!-- Exclude the javadoc directory in the ${doc.dir} dir -->
-                <exclude name="_notes/**"/> <!-- Exclude the _notes directory in the ${doc.dir} dir -->
-                <exclude name="xsl/**"/> <!-- Exclude the _notes directory in the ${doc.dir} dir -->
-            </fileset>
-        </copy>
-        <copy todir="${build.doc}/xsl" filtering="true" >
-            <fileset dir="${doc.dir}/xsl" />
-        </copy>
     </target>
 
 
-    <target
-            name="doc-dist"
-            depends="clean,doc"
+    <target name="doc-dist"
+            depends="clean,javaDoc"
             description="Builds documentation distribution"
             >
 
@@ -475,9 +462,7 @@
 
     </target>
 
-
-    <target
-            name="src-dist"
+    <target name="src-dist"
             depends="clean,PreProcessSourceCode"
             description="Builds source distribution"
             >
@@ -527,8 +512,7 @@
 
     </target>
 
-    <target
-            name="server-dist"
+    <target name="server-dist"
             depends="server"
             description="Packages the war file into tar file with a release related name.">
 
@@ -550,18 +534,14 @@
 
     </target>
 
-
-    <target
-            name="DISTRO"
+    <target name="DISTRO"
             depends="clean,src-dist,doc-dist,server-dist,check"
             description="Builds complete distribution"
             >
 
     </target>
 
-
-    <target
-            name="IsJavaDocUpToDate"
+    <target name="IsJavaDocUpToDate"
             description="Checks to see if the JavaDoc is out of date."
             >
         <uptodate property="JavaDocIsUpToDate"
@@ -573,9 +553,7 @@
 
     </target>
 
-
-    <target
-            name="BESclient"
+    <target name="BESclient"
             depends="olfs-lib"
             description="Build and package the back end client."
             >
@@ -592,9 +570,6 @@
 
 
     </target>
-
-
-
 
     <target name="hexEncoderApp"
         depends="clean,compile"
@@ -623,10 +598,6 @@
 
     </target>
 
-
-
-
-
     <target name="NcmlDispatchHandler"
         depends="clean,compile"
         description="Builds jar file for the NcML Dispatch Handler">
@@ -639,7 +610,6 @@
         </jar>
 
     </target>
-
 
     <target name="GatewayDispatchHandler"
         depends="clean,compile"
@@ -656,8 +626,6 @@
         </jar>
 
     </target>
-
-
 
     <target name="validatorApp"
         depends="clean,compile"
@@ -684,9 +652,6 @@
         </jar>
 
     </target>
-
-
-
 
     <target name="XSLTransformer"
         depends="clean,compile"
@@ -718,7 +683,7 @@
 
     <target
             name="server"
-            depends="olfs-lib,doc"
+            depends="clean,compile"
             description="Performs a clean build of the core software and assembles the WAR file."
             >
 
@@ -730,7 +695,13 @@
 
 
         <mkdir dir="${build.dir}/webapp" />
-        <copy file="${build.doc}/index.jsp" tofile="${build.dir}/webapp/index.jsp" />
+
+
+        <!-- Turning on filtering here allows us to inject the version number into the XSLT code -->
+        <copy todir="${build.webapp}/xsl" filtering="true" >
+            <fileset dir="${hyraxResources.dir}/xsl"/>
+        </copy>
+
 
         <war destfile="${build.dist}/opendap.war"
              webxml="${WebInfResources.dir}/web.xml"
@@ -740,6 +711,8 @@
             <lib dir="${lib.dir}">
                 <include name="${jdom.lib}"/>
                 <include name="${junit.lib}"/>
+                <include name="${urlRewrite.lib}"/>
+
                 <include name="${commons-lang.lib}"/>
                 <include name="${commons-cli.lib}"/>
                 <include name="${commons-httpclient.lib}"/>
@@ -758,11 +731,14 @@
             </lib>
             <classes dir="${build.classes}"/>
 
-            <zipfileset dir="${build.doc}" prefix="docs" >
+            <zipfileset dir="${doc.dir}" prefix="docs" >
                 <exclude name="src.distribution.readme"/>
-                <exclude name="_notes"/>
             </zipfileset>
 
+
+            <zipfileset dir="${hyraxResources.dir}/admin" prefix="admin" />
+            <zipfileset dir="${hyraxResources.dir}/error" prefix="error" />
+            <zipfileset dir="${hyraxResources.dir}/jsp"   prefix="jsp" />
 
             <zipfileset dir="${WebStartResources.dir}" prefix="WebStart" />
             <zipfileset dir="${GatewayResources.dir}" prefix="gateway" />
@@ -776,6 +752,7 @@
             <webinf dir="${WebInfResources.dir}">
                 <include name="logback-test.xml"/>
                 <include name="logback.xml"/>
+                <include name="urlrewrite.xml"/>
             </webinf>
 
 
@@ -784,77 +761,6 @@
         <delete file="${build.dist}/index.html"/>
 
     </target>
-
-    <target
-            name="JspServer"
-            depends="olfs-lib,doc"
-            description="Performs a clean build of the core software and assembles the WAR file."
-            >
-
-
-        <echo level="info" message="Building jsp server war file."/>
-        <echo level="info" message="jspServerWebInf.dir: ${jspServerWebInf.dir}"/>
-        <echo level="info" message="build.dist: ${build.dist}"/>
-
-
-        <mkdir dir="${build.dir}/webapp" />
-        <copy file="${build.doc}/index.jsp" tofile="${build.dir}/webapp/index.jsp" />
-
-        <war destfile="${build.dist}/opendap.war" webxml="${jspServerWebInf.dir}/web.xml" >
-
-
-            <zipfileset dir="${build.dir}/webapp" prefix="" />
-
-
-
-            <lib dir="${lib.dir}">
-                <include name="${jdom.lib}"/>
-                <include name="${junit.lib}"/>
-                <include name="${commons-lang.lib}"/>
-                <include name="${commons-cli.lib}"/>
-                <include name="${commons-httpclient.lib}"/>
-                <include name="${commons-logging.lib}"/>
-                <include name="${commons-codec.lib}"/>
-                <include name="${xercesImpl.lib}"/>
-                <include name="${xercesXmlApis.lib}"/>
-                <include name="${saxon-jdom.lib}"/>
-                <include name="${saxon-s9api.lib}"/>
-                <include name="${saxon.lib}"/>
-
-                <include name="${slf4j.lib}"/>
-                <include name="${logback-core.lib}"/>
-                <include name="${logback-classic.lib}"/>
-
-            </lib>
-            <classes dir="${build.classes}"/>
-
-            <zipfileset dir="${build.doc}" prefix="docs" >
-                <exclude name="src.distribution.readme"/>
-                <exclude name="_notes"/>
-            </zipfileset>
-
-
-            <zipfileset dir="${WebStartResources.dir}" prefix="WebStart" />
-            <zipfileset dir="${GatewayResources.dir}" prefix="gateway" />
-            <zipfileset dir="${ncISO.dir}" prefix="nciso" />
-
-
-
-            <zipfileset dir="${initialContent.dir}" prefix="initialContent">
-                <include name="**/*"/>
-            </zipfileset>
-
-            <webinf dir="${jspServerWebInf.dir}">
-                <include name="logback-test.xml"/>
-                <include name="logback.xml"/>
-            </webinf>
-
-        </war>
-
-        <delete file="${build.dist}/index.html"/>
-
-    </target>
-
 
 
     <target name="fortify" if="fortify.present">
