olfs: Fixed bug in WCS deployment that was causing the DocServlet not to be included.

--- a/resources/WCS/WEB-INF/web.xml
+++ b/resources/WCS/WEB-INF/web.xml
@@ -30,7 +30,7 @@
 
         <init-param>
             <param-name>EnableUpdateUrl</param-name>
-            <param-value>true</param-value>
+            <param-value>false</param-value>
         </init-param>
 
         <load-on-startup>1</load-on-startup> 
