olfs: Added a response blocking filer to the BotBlocker so that crawl bots can be stopped from accessing data services but can still get metadata and catalog information.

--- a/resources/hyrax/WEB-INF/web.xml
+++ b/resources/hyrax/WEB-INF/web.xml
@@ -147,7 +147,7 @@
 
         <init-param>
             <param-name>DebugOn</param-name>
-            <param-value>true</param-value>
+            <param-value>false</param-value>
         </init-param>
 
         <init-param>
