olfs: Added multiple bucket support for s3 catalog. Fixed s3 catalog dispatch issues.

--- a/resources/experiments/s3/WEB-INF/web.xml
+++ b/resources/experiments/s3/WEB-INF/web.xml
@@ -53,7 +53,8 @@
 
     <servlet-mapping>
         <servlet-name>s3</servlet-name>
-        <url-pattern>/index/*</url-pattern>
+        <url-pattern>/catalog/*</url-pattern>
+        <url-pattern>/dap/*</url-pattern>
     </servlet-mapping>
 
 
