olfs: Adding NEWS file, updating ChangeLog, README, etc. for Hyrax 1.9 branch.

--- a/build.xml
+++ b/build.xml
@@ -491,6 +491,8 @@
                 <exclude name="src/opendap/wcsGateway/**"/>
                 <exclude name="src/opendap/wcs/**"/>
                 <exclude name="src/opendap/semantics/**"/>
+                
+                <!-- Exclude the prototype AWS code  -->
                 <exclude name="src/opendap/aws/**"/>
                 <exclude name="src/opendap/noaa_s3/**"/>
 
