--- a/resources/experiments/AWS/Glacier/WEB-INF/web.xml
+++ b/resources/experiments/AWS/Glacier/WEB-INF/web.xml
@@ -33,8 +33,8 @@
 
   <!-- ================== Built In Servlet Definitions ==================== -->
 
-    <display-name>Hyrax</display-name>
-    <description>OPeNDAP Hyrax Server</description>
+    <display-name>Glacier Service</display-name>
+    <description>OPeNDAP DAP4 Glacier Service</description>
 
 
   <!-- The JSP page compiler and execution servlet, which is the mechanism  -->
@@ -157,28 +157,6 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
-
-    <filter>
-        <filter-name>UrlRewriteFilter</filter-name>
-        <filter-class>org.tuckey.web.filters.urlrewrite.UrlRewriteFilter</filter-class>
-        <init-param>
-            <param-name>logLevel</param-name>
-            <param-value>sysout:DEBUG</param-value>
-        </init-param>
-        <init-param>
-            <param-name>RewriteLog</param-name>
-            <param-value>log4j</param-value>
-        </init-param>
-    </filter>
-
-    <filter-mapping>
-        <filter-name>UrlRewriteFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-        <dispatcher>REQUEST</dispatcher>
-        <dispatcher>FORWARD</dispatcher>
-        <dispatcher>INCLUDE</dispatcher>
-        <dispatcher>ERROR</dispatcher>
-    </filter-mapping>
 
 
 
